--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=Student-Manage-Adv
-spring.datasource.url =jdbc:mysql://localhost:3306/student_db
+spring.datasource.url =jdbc:mysql://localhost:3306/student_db1
 spring.datasource.username=root
 spring.datasource.password=Manoj@1812
 
